# AnimBoom

./: .clang-tidy  .gitignore  .gitmodules  .qmlformat.ini  .qmllint.ini  AnimBoom.qmlproject  CMakeLists.txt  CMakePresets.json  Main.qml  README.md  main.cpp  main.qml
.ci/: helpers.py  run-clang-format.py  run-qmlformat.py
.circleci/: config.yml
.github/workflows/: build.yaml  file-format.yaml  pre-commit.yaml
QmlContent/: App.qml  CMakeLists.txt  MainView.ui.qml
QmlContent/Delegates/: MenuDelegate.ui.qml
QmlContent/Widgets/: AppMenu.ui.qml  AppMenuBar.qml  AppMenuBarForm.ui.qml  AppMenuSeparator.ui.qml
QmlImports/: CMakeLists.txt
QmlImports/Assets/: Assets.qml  CMakeLists.txt  qmldir
QmlImports/Logic/: CMakeLists.txt  Logic.qmltypes  qmldir
QmlImports/Utils/: CMakeLists.txt  Constants.qml  qmldir
assets/: CMakeLists.txt
cmake/: FindPackages.cmake  Macros.cmake  Options.cmake  Testing.cmake
docker/: ci_linux.Dockerfile  installPackages.sh  installQt_GCC.sh  linux.Dockerfile
modules/: CMakeLists.txt
modules/hello/: CMakeLists.txt
modules/hello/gtest/: hellotest.cpp
modules/hello/include/: hello.hpp
modules/hello/src/: hello.cpp
plugins/: CMakeLists.txt
plugins/Logic/: BusinessLogic.qml  CMakeLists.txt  MenuBarHandler.cpp  MenuBarHandler.hpp
qml/: CMakeLists.txt  main.qml
qml/Content/: CMakeLists.txt  MainView.qml
qml/Delegates/: CMakeLists.txt  MenuDelegate.qml
qml/Logic/: MenuBarHandler.cpp  MenuBarHandler.hpp
qml/Utils/: CMakeLists.txt
qml/Utils/fonts/LibreFranklin/: OFL.txt
qml/Widgets/: AppMenu.qml  AppMenuBar.qml  CMakeLists.txt
scripts/: clang-tidy-check.py  helpers.py  qmllint-check.py  run-clang-format.py  run-qmlformat.py
src/: CMakeLists.txt  main.cpp  main.qml
src/modules/hello/gtest/: hellotest.cpp
ui/: App.qml  CMakeLists.txt  Main.qml  MainView.qml  MainViewForm.ui.qml  qmldir  qtquickcontrols2.conf
ui/Utils/: CMakeLists.txt  Constants.qml  FontContainer.qml  qmldir
ui/Widgets/: AppMenu.qml  AppMenuBar.qml  AppMenuSeparator.qml  CMakeLists.txt  ToolbarButton.ui.qml  qmldir
ui/Widgets/Delegates/: CMakeLists.txt  MenuBarDelegate.qml  MenuDelegate.qml  qmldir
